# sys_self_mc

./: .gitignore  README.md  package.xml  rm_domain.owl  setup.cfg  setup.py  sys_self.owl  test.py
config/: attach.yaml  loc.yaml
launch/: metacontrol.launch.py
old/: sys_self_EXTRA_COMPONENTS.owl  sys_self_OLD.owl
ontologies/: app.owl  app_attach.owl  app_goal.owl  app_loc.owl  higgs_comms.owl  higgs_loc.owl  rm_domain.owl  sys_self.owl
sys_self_mc/: observer_node.py  onto_mc.py  ros_mc.py  sys_self_node.py
